--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
          <button class="todo-button" type="submit">
              <i class="fas fa-plus-square"></i>
          </button>
+         <div class="select">
+             <select name="todos" class="filter-todo">
+             <option  value="all">All</option>
+             <option value="completed">completed</option>
+             <option value="uncompleted">Uncompleted</option>
+            </select>
+         </div>
      </form>
      <div class="todo-container">
          <ul class="todo-list"></ul>
